--- a/lxc-iptag.conf
+++ b/lxc-iptag.conf
@@ -3,4 +3,7 @@ CIDR_LIST=(
     100.64.0.0/10
     10.0.0.0/8
 )
-CHECK_INTERVAL=60
+LOOP_INTERVAL=60
+FW_NET_INTERFACE_CHECK_INTERVAL=60
+LXC_STATUS_CHECK_INTERVAL=-1
+FORCE_UPDATE_INTERVAL=1800
