--- a/lxc-iptag.conf
+++ b/lxc-iptag.conf
@@ -7,3 +7,11 @@ LOOP_INTERVAL=60
 FW_NET_INTERFACE_CHECK_INTERVAL=60
 LXC_STATUS_CHECK_INTERVAL=-1
 FORCE_UPDATE_INTERVAL=1800
+
+# Exclusion list for IPs or container IDs
+EXCLUSION_LIST=(
+    # Add IPs or container IDs here
+    # Example:
+    # 192.168.1.100
+    # container_id_1
+)
